# OOP

./: .gitignore  CMakeLists.txt  README.md  defines.h  main.cpp  model.cpp  model.h  model.txt  oop_lab_05  point.cpp  point.h  pyramide.txt
drawing/: drawing.cpp  drawing.h
frameModel/: frameStructure.h  model.cpp  model.h
lab_02/: Array.h  BaseMatrix.h  CMakeLists.txt  Matrix.h  errors.h  main.cpp
manager/: myManager.cpp  myManager.h
matrix/: matrix.cpp  matrix.h
oop_lab_01/: CMakeLists.txt  defines.h  main.cpp
oop_lab_01/drawing/: colorsDefine.h  drawing.cpp  drawing.h
oop_lab_01/frameModel/: frameStructure.h  model.cpp  model.h  modelRotation.cpp  modelRotation.h  zoom.cpp  zoom.h
oop_lab_01/glutWindow/: glutDefines.h  myGLUT.cpp  myGLUT.h
oop_lab_01/manager/: myManager.cpp  myManager.h
oop_lab_01/matrix/: matrix.cpp  matrix.h
oop_lab_01/point/: point.cpp  point.h
oop_lab_01/request/: request.cpp  request.h
oop_lab_01/rotation/: modelRotation.cpp  modelRotation.h
oop_lab_01/zoom/: zoom.cpp  zoom.h
oop_lab_2/: Array.h  BaseMatrix.h  CMakeLists.txt  Iterator.h  Matrix.h  constIterator.h  errors.h  main.cpp
oop_lab_2/implement/: constIteratorImp.hpp  iteratorImp.hpp  matrixConstructors.hpp  matrixEquals.hpp  matrixGettersAndSetters.hpp  matrixInOutOperators.hpp  matrixMath.hpp  matrixMultiplyDivision.hpp  matrixPlusMinus.hpp  matrixPrivate.hpp
oop_lab_4/: button.cpp  button.h  cabin.cpp  cabin.h  constants.h  controller.cpp  controller.h  door.cpp  door.h  elevator.cpp  elevator.h  enums.h  lab_04.pro  lab_04.pro.user.1f6737c.4.8-pre1  lift.cpp  lift.h  lr_4.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
oop_lab_5/: juicepassed.drawio
point/: point.cpp  point.h
rotation/: modelRotation.cpp  modelRotation.h
zoom/: zoom.cpp  zoom.h
